[package]
name = "quacking_quack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "quacking_quack"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.2.1", features = [
    "vscalar",
    "vscalar-arrow",
    "vtab-arrow"
] }
duckdb-loadable-macros = "0.1.5"
libduckdb-sys = { version = "1.2.1", features = ["loadable-extension"] }
rust-stemmers = "1.2.0"
